src/interpreter/snapshots/inlyne__interpreter__tests__image_loading_fails_gracefully.snap
---
source: src/interpreter/tests.rs
description: "![This actually returns JSON 😈](http://127.0.0.1:36771/2/snapshot.png)"
expression: "interpret_md_with_opts(&text, opts)"
---
[
    Image(
        Image {
            image_data: Mutex {
                data: Some(
                    ImageData {
                        lz4_blob: { len: 7759, data: [4, 34, 77, ..] },
                        scale: false,
                        dimensions: (63, 72),
                    },
                ),
                poisoned: false,
                ..
            },
            is_aligned: Some(Left),
            ..
        },
    ),
    Spacer(
        InvisibleSpacer(5),
    ),
    Spacer(
        InvisibleSpacer(5),
    ),
]
